[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Moussa Mikhail <moussamikhail56@gmail.com>"]
license = "MIT"
packages = [
	{include = "thesis"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
XlsxWriter = "^3.0.3"
simulation = {git = "https://github.com/Moussa-Mikhail/thesis_code.git", rev="main"}

[tool.poetry.dev-dependencies]
mypy = "^0.960"
pylint = "^2.14.0"
flake8 = "^4.0.1"
flake8-comprehensions = "^3.10.0"
flake8-bugbear = "^22.4.25"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
